syntax = "proto3";

package SignalR.Protobuf.Protocol;

import "utils.proto";

message InvocationMessageProtobuf {
	map<string, string> headers = 1;
	string invocationId = 2;
	string target = 3;
	repeated Argument arguments = 4;
	repeated string streamIds = 5;
}

message StreamItemMessageProtobuf {

}

message CompletionMessageProtobuf {

}

message StreamInvocationMessageProtobuf {

}

message CancelInvocationMessageProtobuf {

}

message PingInvocationMessageProtobuf {

}

message CloseMessageProtobuf {

}